[gd_scene load_steps=6 format=3 uid="uid://di5cqoylsiuih"]

[ext_resource type="Theme" uid="uid://bf2f7l00r6b32" path="res://default_theme.tres" id="1_hqevu"]
[ext_resource type="Script" path="res://gui/hud/hud.gd" id="2_5x2v4"]
[ext_resource type="Texture2D" uid="uid://ckqj5j6m7bfq1" path="res://gui/hud/corn.png" id="2_kjjcc"]
[ext_resource type="StyleBox" uid="uid://s2gfcmks0e7r" path="res://gui/hud/stamina_bar_style.tres" id="4_dlclg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmsjs"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hqevu")
script = ExtResource("2_5x2v4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="PointsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_kjjcc")

[node name="Separator" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="StaminaBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -40.0
offset_right = -150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_bmsjs")
theme_override_styles/fill = ExtResource("4_dlclg")
step = 1.0
value = 100.0

[node name="GameOverLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -14.5
offset_right = 62.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "GAME_OVER"
